--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,11 @@ input, select, textarea, label {
   border-color:  rgba(171, 209, 0, 0.5);
 }
 
+input, select, textarea {  
+  border-bottom: 1px solid rgba(171, 209, 0, 0.5) !important;
+  border-radius: 0 !important;
+}
+
 .form-control:focus, .btn:focus {
   border-color: rgba(171, 209, 0, 0.5);
   box-shadow: inset 0 1px 1px rgba(171, 209, 0, 0.5), 0 0 4px rgba(171, 209, 0, 0.5);
