--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@
   border-top: none;
 }
 
+.table thead th {
+  border-bottom: 1px solid rgba(171, 209, 0, 0.5);
+}
+
 .tab-content-bg {
   background-color: white;
 }
@@ -55,9 +59,15 @@ h5 {
 }
 
 input, select, textarea, label {
+  font-weight: 300;
   font-size: .85em !important;
   border: 0 !important;
   border-color:  rgba(171, 209, 0, 0.5);
+}
+
+.auto-complete-li {
+  font-weight: 300;
+  font-size: .85em !important;
 }
 
 input, select, textarea {  
