--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,14 @@
-.App {
-  text-align: center;
-}
-
-.btn {
-  font-size: inherit;
-}
-
 .table {
   font-size: .8em;
   font-weight: 300 !important;
 }
-
 .table td, .table th {
   padding: .25em;
   border-top: none;
 }
-
 .table thead th {
   border-bottom: 1px solid rgba(171, 209, 0, 0.5);
 }
-
 .tab-content-bg {
   background-color: white;
 }
@@ -27,11 +16,9 @@
 .nav-tabs .nav-link {
   border: 0px !important;
 }
-
 .nav-tabs {
   border-bottom: 0px !important;
 }
-
 .inactive {
   color: white !important;
 }
@@ -39,19 +26,15 @@
 h1 {
   color: white;
 }
-
 h2 {
   font-size: 1.3em;
   color: rgb(141,195,219, 1) !important;
 }
-
 h3 {
   font-size: 1em;
 }
-
 h4 {
   font-size: 1em;
-
 }
 h5 {
   font-size: .95em;
@@ -64,17 +47,14 @@ input, select, textarea, label {
   border: 0 !important;
   border-color:  rgba(171, 209, 0, 0.5);
 }
-
 .auto-complete-li {
   font-weight: 300;
   font-size: .85em !important;
 }
-
 input, select, textarea {  
   border-bottom: 1px solid rgba(171, 209, 0, 0.5) !important;
   border-radius: 0 !important;
 }
-
 .form-control:focus, .btn:focus {
   border-color: rgba(171, 209, 0, 0.5);
   box-shadow: inset 0 1px 1px rgba(171, 209, 0, 0.5), 0 0 4px rgba(171, 209, 0, 0.5);
@@ -87,7 +67,6 @@ input, select, textarea {
 .annotation {
   font-size: .7em !important;
 }
-
 .card-text {
   font-size: .85em !important;
 }
@@ -95,29 +74,23 @@ input, select, textarea {
 .bg-primary {
   background-color: rgba(141,195,219, .25) !important;
 }
-
 .bg-light {
   background-color: rgb(141,195,219, .2) !important;
 }
-
 .text-primary {
   color: #ABD100 !important;
 }
-
 .border-primary {
   border-color: #ABD100 !important;
 }
-
 .border-secondary {
   border-color: rgba(171, 209, 0, 0.3) !important;
 }
-
 .btn-primary {
   background-color: #ABD100 !important;
   border-color: #ABD100 !important;
   border: none !important;
 }
-
 .btn-primary:hover {
   background-color: rgba(171, 209, 0, 0.5) !important;
   border: none !important;
@@ -126,7 +99,31 @@ input, select, textarea {
 body {
   margin: 0;
   padding: 0;
+  text-align: center;
   background-color: #8DC3DB;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
 }
+
+.move-enter {
+  opacity: 0.01;
+  transform: translate(-80px, 0);
+}
+
+.move-enter-active {
+  opacity: 1;
+  transform: translate(0, 0);
+  transition: all 500ms ease-in;
+}
+
+.move-exit {
+  opacity: 1;
+  transform: translate(0, 0)
+}
+
+.move-exit-active {
+  opacity: 0.01;
+  transform: translate(40px, 0);
+  transition: all 500ms ease-in;
+}
+
